--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,12 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='../public/stylesheets/style.css' />
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <p>Welcome to Matthew's <%= title %> Page</p>
+    <p>Click the link below to learn more.</p>
+    <a href="/skills">Matthew's Skills</a>
   </body>
 </html>
