--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='../public/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to Matthew's <%= title %> Page</p>
-    <p>Click the link below to learn more.</p>
-    <a href="/skills">Matthew's Skills</a>
-  </body>
-</html>
+<%- include('./partials/header') %>
+  
+  <p>Welcome to Matthew's <%= title %> Page</p>
+  <p>Click the link below to learn more.</p>
+  <a href="/skills">Matthew's Skills</a>
+
+<%- include('./partials/footer') %>
