add newSkill and create functionality

--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -1,5 +1,6 @@
 <%- include('../partials/header') %>
     <ul>
+      <a href="/skills/new">Add a skill</a>
         <% skills.forEach(function(s) { %>
         <li>
             <a href="/skills/ <%= s.id %>">
